<resources>
    <string name="app_name">My Printer</string>
    <string name="hello_world">Hello World!</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="setup_printer">Setup Printer</string>
    <string name="printer_setup">Printer Setup</string>
    <string name="add_printer">Add Printer</string>
    <string name="wifi_printers">Wi-Fi Printers</string>
    <string name="bluetooth_printers">Bluetooth Printers</string>
    <string name="usb_printers">USB Printers</string>
    <string name="no_usb_printer_found">No USB printer found</string>
    <string name="connect_usb_otg">Connect a printer using a USB OTG adapter and try again.</string>
    <string name="refresh">Refresh</string>
    <string name="scan">Scan</string>
    <string name="wifi_soon">Wi-Fi printer discovery will be available soon.</string>
    <string name="bluetooth_soon">Bluetooth printer support will be available soon.</string>
    <string name="usb_permission_denied">USB permission was not granted.</string>
    <string name="usb_unsupported_protocol">USB printer detected, but this printer protocol is not supported yet.</string>
    <string name="printer_disconnected">Printer disconnected</string>
    <string name="save_pdf_desc">Save your print job as a PDF file</string>
    <string name="photos_and_images">Photos and Images</string>
    <string name="documents">Documents</string>
    <string name="print_preview">Print Preview</string>
    <string name="print">PRINT</string>
    <string name="pages">Pages</string>
    <string name="info_icon_desc">App Info</string>
    <string name="add_icon_desc">Add File</string>
    <string name="settings_icon_desc">Settings</string>
    <string name="printer_icon_desc">Printer Icon</string>
    <string name="photo_icon_desc">Photo Icon</string>
    <string name="document_icon_desc">Document Icon</string>
    <string name="secondary_text_color">#6F6263</string>
</resources>